k8s-do/omeka-s/omeka-s-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: omeka-s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omeka-s
  serviceName: omeka-s
  template:
    metadata:
      labels:
        app: omeka-s
    spec:
      containers:
        - name: nginx
          image: ghcr.io/netwerk-digitaal-erfgoed/omeka-s-nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: omeka-s-files
              mountPath: /var/www/html/files/
        - name: php
          image: ghcr.io/netwerk-digitaal-erfgoed/omeka-s-php
          volumeMounts:
            - name: omeka-s-files
              mountPath: /var/www/html/files/
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: ghcr
      securityContext:
        fsGroup: 82 # www-data
  volumeClaimTemplates:
    - metadata:
        name: omeka-s-files
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
        storageClassName: do-block-storage
