k8s-do/omeka-s/omeka-s-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omeka-s
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - omeka.netwerkdigitaalerfgoed.nl
      secretName: omeka-s-tls
  rules:
    - host: omeka.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omeka-s
                port:
                  number: 80
